// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile n huge 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  padding-left: 10px;
  flex: 1;
}

.IS5 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS5"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <View
      className="IS4"
    >
      <View
        className="IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        className="IS3"
      >
        This is tile headline
      </Text>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
</Link>
`;

exports[`tile n medium 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <View
      className="IS5"
    >
      <View
        className="IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        className="IS3"
      >
        This is tile headline
      </Text>
      <Text
        accessibilityRole="header"
        aria-level="4"
        className="IS4"
      >
        Three Conservative MPs resign
      </Text>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
</Link>
`;

exports[`tile n small 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <View
      className="IS5"
    >
      <View
        className="IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        className="IS3"
      >
        This is tile headline
      </Text>
      <Text
        accessibilityRole="header"
        aria-level="4"
        className="IS4"
      >
        Three Conservative MPs resign
      </Text>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
</Link>
`;

exports[`tile n wide 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <View
      className="IS5"
    >
      <View
        className="IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        className="IS3"
      >
        This is tile headline
      </Text>
      <Text
        accessibilityRole="header"
        aria-level="4"
        className="IS4"
      >
        Three Conservative MPs resign
      </Text>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
</Link>
`;

exports[`tile n with default star 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <View
      className="IS5"
    >
      <View
        className="IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        className="IS3"
      >
        This is tile headline
      </Text>
      <Text
        accessibilityRole="header"
        aria-level="4"
        className="IS4"
      >
        Three Conservative MPs resign
      </Text>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
</Link>
`;

exports[`tile n without breakpoint should be like small 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  0: [object Object];
  1: [object Object];
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <View
      className="IS5"
    >
      <View
        className="IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </View>
      <Text
        accessibilityRole="header"
        aria-level="3"
        className="IS3"
      >
        This is tile headline
      </Text>
      <Text
        accessibilityRole="header"
        aria-level="4"
        className="IS4"
      >
        Three Conservative MPs resign
      </Text>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </View>
  </View>
</Link>
`;
